--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./assets/styles/style.min.css" />
+    <!--@styles-->
   </head>
   <body>
     <h1>Hello world!</h1>
   </body>
-  <script src="./assets/scripts/script.min.js"></script>
+  <!--@scripts-->
 </html>
