--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
     <!--@styles-->
   </head>
-  <body>
-    <h1>Hello world!</h1>
-  </body>
+  <body></body>
   <!--@scripts-->
 </html>
